--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -9,6 +9,46 @@
 .main-container {
     position: relative;
     @include clearfix;
+    .scroll-down {
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        border-left: 2px solid;
+        border-bottom: 2px solid;
+        border-color: $Green;
+        left: 50%;
+        margin: 0 0 0 -20px;
+        bottom: 20px;
+        padding: 10px;
+        z-index: 1;
+        animation: move 2s infinite;
+        @include transform(rotate(-45deg));
+        a {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            border-left: 2px solid;
+            border-bottom: 2px solid;
+            border-color: $Green;
+            left: 10px;
+            bottom: 10px;
+            padding: 10px;
+            z-index: 1;
+        }
+    }
+    @keyframes move {
+        0% {
+            bottom: 20px;
+        }
+        50% {
+            bottom: 40px;
+        }
+    }
+    .navbar {
+        &.active {
+            background: $Grey;
+        }
+    }
     .section {
         position: relative;
         @include clearfix;
@@ -24,6 +64,7 @@
         min-height: 100vh;
         background-position: 0, 50% 50%;
         background-size: auto, cover;
+        background-attachment: fixed;
         z-index: 1;
         &::after {
             position: absolute;
@@ -277,6 +318,10 @@
     }
     .faq {
         background: $Grey;
+        .answer {
+            margin: 10px 0 0;
+            color: #fff;
+        }
         .accordion {
             background: #171717;
             padding: 15px 20px;
@@ -333,6 +378,7 @@
         background-size: auto, cover;
         background-position: 0, 50% 50%;
         background-repeat: repeat, no-repeat;
+        background-attachment: fixed;
         z-index: 1;
         &::after {
             position: absolute;
@@ -368,9 +414,13 @@
             background: transparent;
             border: 1px solid #444;
             padding: 20px 12px;
-            border-radius: 3px;
+            border-radius: 0;
             color: $Green;
             box-shadow: none;
+            font: {
+                family: $Title;
+                size: 14px;
+            }
             &:focus {
                 border-color: $Green;
                 box-shadow: none;
